trying to get welcome pg to work

--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
 
+<!-- reset CSS -->
+ <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css"/>
+
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kavoon&family=Rancho&family=Roboto:wght@500&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./styles.css">
+<!-- my CSS -->
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <h1>BRANDI JEFFERSON</h1>
+
+    <div id="welcome-page">
+        <h1 id="welcome-text"></h1>
+    </div>
+
+
+    <section id="turned" >
+        <h1>BRANDI'S PORTFOLIO</h1>
+    </section>
+
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
