got welcome page working

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 </head>
 <body>
 
-    <div id="welcome-page">
-        <h1 id="welcome-text"></h1>
-    </div>
+    <div class="welcome">
+        <div class="w">W</div>
+        <div class="e">E</div>
+        <div class="l">L</div>
+        <div class="c">C</div>
+        <div class="o">O</div>
+        <div class="m">M</div>
+        <div class="e2">E</div>
+      </div>
 
 
     <section id="turned" >
