updated colors on welcome page. changed font on main page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kavoon&family=Rancho&family=Roboto:wght@500&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Kavoon&family=Playfair+Display&family=Rubik+80s+Fade&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
 <!-- my CSS -->
     <link rel="stylesheet" href="./styles/styles.css">
