--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Kavoon&family=Playfair+Display&family=Rubik+80s+Fade&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Anton&family=Archivo+Black&family=Kavoon&family=Playfair+Display&family=Rubik+80s+Fade&family=Shadows+Into+Light&family=Ultra&display=swap" rel="stylesheet">
+
+    <!-- font awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <!-- font awesome JS -->
+    <script src="https://kit.fontawesome.com/0030309d82.js" crossorigin="anonymous"></script>
+
 
 <!-- my CSS -->
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-
+<!-- welcome page -->
     <div class="welcome">
         <div class="w">W</div>
         <div class="e">E</div>
@@ -29,11 +35,36 @@
         <div class="e2">E</div>
       </div>
 
-
+<!-- main page -->
+<main>
     <section id="turned" >
         <h1>BRANDI'S PORTFOLIO</h1>
     </section>
 
+    <section id="middleSect">
+            <article>
+                <!-- <div id="icons">
+                    <a href="https://www.linkedin.com/in/brandi-jefferson/" target="blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/brandi-jeff" target="blank" title="Go to Brandi's Github">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div> -->
+                <div id="welcomeMsg">
+                    <p>
+                        Hey! I am a Junior Software Developer currently learning and very much interested in frontend development. 
+                    </p>
+                </div>
+
+                <div id="photo">
+                    <img src="./photos/profile_pic.jpg" alt="Brandi's selfie" id="pic">
+                </div>
+            </article>
+    </section>
+
+</main>
+    
     <script src="./scripts/main.js"></script>
 </body>
 </html>
