moved index.html to root folder

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/tailwind.css" />
-    <link rel="stylesheet" href="../src/input.css" />
+    <link rel="stylesheet" href="./build/css/tailwind.css" />
+    <link rel="stylesheet" href="./src/input.css" />
   </head>
   
   <body class="min-h-screen bg-my-teal text-my-orange">
@@ -95,7 +95,7 @@
           </div>
           <div id="photo">
             <img
-              src="./photos/profile_pic.jpg"
+              src="./build/photos/profile_pic.jpg"
               alt="Brandi photo"
               class="w-72 h-72 rounded-full fixed lg:right-24 4xl:top-[305px]"
               id="pic"
@@ -108,6 +108,6 @@
     <!-- JS -->
     <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
-    <script src="../build/scripts/main.js"></script>
+    <script src="./build/scripts/main.js"></script>
   </body>
 </html>
