--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       <section id="navHeader" class=" relative h-48 pt-5 pb-12">         
           <div data-dial-init class="fixed flex top-6 left-6 group">
             
-                <button id="mainNavBtn" type="button" data-dial-toggle="speed-dial-menu-top-left" aria-controls="speed-dial-menu-horizontal" aria-expanded="false" class=" flex mr-2 items-center justify-center text-my-orange bg-my-teal rounded-sm w-20 h-20 dark:text-my-teal dark:bg-my-orange">
-                  <svg class="w-10 h-10" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+                <button id="mainNavBtn" type="button" data-dial-toggle="speed-dial-menu-top-left" aria-controls="speed-dial-menu-horizontal" aria-expanded="false" class=" flex mr-2 items-center justify-center text-my-orange bg-my-teal rounded-sm w-20 h-20 sm:w-12 sm:h-12 dark:text-my-teal dark:bg-my-orange">
+                  <svg class="w-10 h-10 sm:w-6 sm:h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                     <span class="sr-only">Open actions menu</span>
                 </button>
                 <div id="speed-dial-menu-top-left" class="hidden" > 
                   <div class= "flex flex-row items-center mr-4 space-x-2">
                 <a href="../index.html">
-                  <button id="homeBtn" type="button" data-tooltip-target="tooltip-print" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 text-gray-500 hover:text-gray-900 bg-white rounded-sm border" style="background-image: url('./build/photos/home_bitmoji.svg');">
+                  <button id="homeBtn" type="button" data-tooltip-target="tooltip-print" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 sm:w-12 sm:h-12 text-gray-500 hover:text-gray-900 bg-white rounded-sm border" style="background-image: url('./build/photos/home_bitmoji.svg');">
                       <span class="sr-only">Home button with bitmoji image</span>
                   </button>
                 </a>
@@ -66,7 +66,7 @@
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
                 <a href="./build/about_me.html">
-                  <button type="button" data-tooltip-target="tooltip-download" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 text-gray-500 hover:text-gray-900 bg-white rounded-sm border" style="background-image: url('./build/photos/me_bitmoji.svg');">
+                  <button type="button" data-tooltip-target="tooltip-download" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 sm:w-12 sm:h-12 text-gray-500 hover:text-gray-900 bg-white rounded-sm border" style="background-image: url('./build/photos/me_bitmoji.svg');">
                       <span class="sr-only">About me button with bitmoji image</span>
                   </button>
                 </a>
@@ -75,7 +75,7 @@
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
                 <a href="http://">
-                  <button type="button" data-tooltip-target="tooltip-share" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 text-gray-500 hover:text-gray-900 bg-white rounded-sm " style="background-image: url('./build/photos/projects_bitmoji.svg');">
+                  <button type="button" data-tooltip-target="tooltip-share" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 sm:w-12 sm:h-12 text-gray-500 hover:text-gray-900 bg-white rounded-sm " style="background-image: url('./build/photos/projects_bitmoji.svg');">
                     <span class="sr-only">Projects button with bitmoji</span>
                 </button>
                 </a>
@@ -84,7 +84,7 @@
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
                 <a href="https://drive.google.com/file/d/1-Cp5XcG9y57AKkSJcgLqCLp6r_Hgr26T/view?usp=sharing" target="_blank">
-                  <button type="button" data-tooltip-target="tooltip-copy" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 bg-white rounded-sm border" style="background-image: url('./build/photos/resume_bitmoji.svg');">
+                  <button type="button" data-tooltip-target="tooltip-copy" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 sm:w-12 sm:h-12 bg-white rounded-sm border" style="background-image: url('./build/photos/resume_bitmoji.svg');">
                   <span class="sr-only">Resume button with bitmoji image</span>
                   </button>
                 </a>
@@ -103,11 +103,11 @@
         <section 
           id="middleSect" 
           class="relative w-screen">
-          <div id="photo" class="absolute left-72 -top-8 lg:-top-1 xl:-top-5">
+          <div id="photo" class="absolute left-72 sm:left-52 md:left-28  -top-8 sm:top-1 lg:-top-1 xl:-top-5">
             <img
               src="./build/photos/profile_pic.jpg"
               alt="Brandi photo"
-              class=" rounded-full relative lg:-top-1"
+              class=" rounded-full relative lg:right-32 sm:-top-2 lg:-top-1"
               id="pic"
             />
           </div>
@@ -123,11 +123,11 @@
 
     <!-- footer  -->
     <footer id="icons" class=" bg-transparent fixed bottom-0 right-0">
-      <div class="md:flex md:justify-between mb-2 md:mb-0">              
+      <div class="sm:flex sm:justify-center md:flex md:justify-between mb-2 md:mb-0">              
         <div class="sm:flex sm:items-center sm:justify-evenly md:flex md:items-center md:justify-evenly p-1 border-b-black">
             <span class="text-sm text-my-teal  dark:text-my-orange pt-5 pr-1">© 2023 Created by Yours Truly.
             </span>
-            <div class="flex mt-4 space-x-3 sm:justify-center sm:mt-0 p-2">
+            <div class="flex mt-4 space-x-3 p-2">
                 <a href="https://github.com/brandi-jeff/" target="_blank" class="foot_btns text-my-orange hover:hover:text-teal-900 dark:hover:text-orange-300">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 -2 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" /></svg>
                     <span class="sr-only">GitHub account</span>
