--- a/index.html
+++ b/index.html
@@ -41,13 +41,9 @@
       <div class="e2">E</div>
     </div>
 
-    <!-- <section id="turned"  class="absolute top-0">
-      <h1>BRANDI'S PORTFOLIO</h1>
-    </section> -->
-
       <!-- nav bar -->
         
-      <section id="navHeader" class=" relative h-48 pt-5 pb-12">         
+      <section id="navHeader" class=" relative h-52 pt-5 pb-12">         
           <div data-dial-init class="fixed flex top-6 left-6 group">
             
                 <button id="mainNavBtn" type="button" data-dial-toggle="speed-dial-menu-top-left" aria-controls="speed-dial-menu-horizontal" aria-expanded="false" class=" flex mr-2 items-center justify-center text-my-orange bg-my-teal rounded-sm w-20 h-20 sm:w-12 sm:h-12 dark:text-my-teal dark:bg-my-orange">
@@ -61,7 +57,7 @@
                       <span class="sr-only">Home button with bitmoji image</span>
                   </button>
                 </a>
-                <div id="tooltip-print" role="tooltip" class="absolute z-10 text-my-orange bg-my-teal dark:text-my-teal dark:bg-my-orange invisible inline-block w-auto px-3 py-2 text-sm font-medium  transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip ">
+                <div id="tooltip-print" role="tooltip" class="absolute z-10 text-my-orange bg-my-teal dark:text-my-teal dark:bg-my-border invisible inline-block w-auto px-3 py-2 text-sm font-medium  transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip ">
                     Home
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
@@ -70,7 +66,7 @@
                       <span class="sr-only">About me button with bitmoji image</span>
                   </button>
                 </a>
-                <div id="tooltip-download" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium  text-my-orange bg-my-teal dark:text-my-teal dark:bg-my-orange transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip ">
+                <div id="tooltip-download" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium  text-my-orange bg-my-teal dark:text-my-teal dark:bg-my-border transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip ">
                   About Me
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
@@ -79,7 +75,7 @@
                     <span class="sr-only">Projects button with bitmoji</span>
                 </button>
                 </a>
-                <div id="tooltip-share" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium  text-my-orange bg-my-teal dark:text-my-teal dark:bg-my-orange transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip">
+                <div id="tooltip-share" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium  text-my-orange bg-my-teal dark:text-my-teal dark:bg-my-border transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip">
                     Projects
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
@@ -88,7 +84,7 @@
                   <span class="sr-only">Resume button with bitmoji image</span>
                   </button>
                 </a>
-                <div id="tooltip-copy" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium  dark:text-my-teal dark:bg-my-orange text-my-orange bg-my-teal transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip">
+                <div id="tooltip-copy" role="tooltip" class="absolute z-10 invisible inline-block w-auto px-3 py-2 text-sm font-medium  dark:text-my-teal dark:bg-my-border text-my-orange bg-my-teal transition-opacity duration-300 rounded-lg shadow-sm opacity-0 tooltip">
                     Resume
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
@@ -98,21 +94,13 @@
       </section>
 
       <!-- main body  -->
-      <main class="xl:pt-0.5 pt-28 ">
+      <main class="xl:pt-0.5 mt-0">
 
         <section 
           id="middleSect" 
           class="relative w-screen">
-          <div id="photo" class="absolute left-72 sm:left-52 md:left-28  -top-8 sm:top-1 lg:-top-1 xl:-top-5">
-            <img
-              src="./build/photos/profile_pic.jpg"
-              alt="Brandi photo"
-              class=" rounded-full relative lg:right-32 sm:-top-2 lg:-top-1"
-              id="pic"
-            />
-          </div>
           <div>
-            <video  id="banner" autoplay loop>
+            <video  id="banner" autoplay loop muted>
               <source src="./build/photos/banner.mp4?v=123" type="video/mp4">
             </video>
           </div>
@@ -122,23 +110,23 @@
     </section>
 
     <!-- footer  -->
-    <footer id="icons" class=" bg-transparent fixed bottom-0 right-0">
-      <div class="sm:flex sm:justify-center md:flex md:justify-between mb-2 md:mb-0">              
+    <footer id="icons" class=" bg-transparent fixed lg:static lg:pt-56 lg:mr-0 bottom-0 right-0">
+      <div class="sm:flex sm:justify-center md:flex md:justify-between lg:justify-center mb-2 md:mb-0">              
         <div class="sm:flex sm:items-center sm:justify-evenly md:flex md:items-center md:justify-evenly p-1 border-b-black">
-            <span class="text-sm text-my-teal  dark:text-my-orange pt-5 pr-1">© 2023 Created by Yours Truly.
+            <span class="text-sm text-my-teal  dark:text-my-border pt-5 pr-1">© 2023 Created by Yours Truly.
             </span>
             <div class="flex mt-4 space-x-3 p-2">
                 <a href="https://github.com/brandi-jeff/" target="_blank" class="foot_btns text-my-orange hover:hover:text-teal-900 dark:hover:text-orange-300">
-                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 -2 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" /></svg>
+                    <svg class="w-5 h-5" fill="#BC9CEC" viewBox="0 -2 24 24"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" /></svg>
                     <span class="sr-only">GitHub account</span>
                 </a>
                 <a href="https://www.linkedin.com/in/brandi-jefferson/" target="_blank" class="foot_btns text-my-orange hover:text-teal-900 dark:hover:text-orange-300">
-                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path
+                    <svg class="w-5 h-5" fill="#BC9CEC" viewBox="0 0 24 24"><path
                       d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z" /></svg>
                     <span class="sr-only">LinkedIn Account</span>
                 </a>
                 <a href="mailto:brandi.jefferson2@yahoo.com" class="foot_btns text-my-orange hover:text-teal-900 dark:hover:text-orange-300">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 -4 24 24" aria-hidden="true"><path d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg>
+                  <svg class="w-5 h-5" fill="none" stroke="#BC9CEC" stroke-width="1.5" viewBox="0 -4 24 24"><path d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg>
                   <span class="sr-only">Email</span>
               </a>
             </div>
