--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           class="relative w-screen">
           <div>
             <video  id="banner" autoplay loop muted>
-              <source src="./build/photos/banner.mp4?v=123" type="video/mp4">
+              <source src="./build/photos/banner2.mp4?v=123" type="video/mp4">
             </video>
           </div>
             
