added projects page,  fixed footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   About Me
                     <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
-                <a href="http://">
+                <a href="./build/projects.html">
                   <button type="button" data-tooltip-target="tooltip-share" data-tooltip-placement="bottom" class="nav_btns bg-cover bg-center flex justify-center items-center w-20 h-20 sm:w-12 sm:h-12 text-gray-500 hover:text-gray-900 bg-white rounded-sm " style="background-image: url('./build/photos/projects_bitmoji.svg');">
                     <span class="sr-only">Projects button with bitmoji</span>
                 </button>
